--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
     <h1>Welcome to IS 445/545</h1>
     <hr>
     <div>Hello Jacob Maston</div>
-    <a> href"My Profile"= C:\Users\sanes\Desktop\new.html
+    <a> href="C:\Users\sanes\Desktop\new.html"> My Profile </a>
     <div>The current time is: <span id="output"></span></div>
     <p>Secret mission starts here. Now. </p>
 
