--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <hr>
-    <h1>Welcome to IS 445/545</h1>
+    <h1>Welcome to IS 445</h1>
     <hr>
     <div>Hello Jacob Maston</div>
     <br>
