--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
     <hr>
     <div>Hello Jacob Maston</div>
     <br>
-    <a href="C:\Users\sanes\Desktop\new.html">My Profile</a>
+    <a href="https://github.com/The-Steeliskt/Sample_Start.git">My Profile</a>
     <br>
     <div>The current time is: <span id="output"></span></div>
     <p>Secret mission starts here. Now. </p>
