--- a/website/new.html
+++ b/website/new.html
@@ -9,7 +9,7 @@
 <body>
     <br>
     <h1 style='text-align:center'><b>Maston, Jacob</b></h1>
-    <hr style="color:green">
+    <hr style="border-color:green">
     <h3 style="text-align:center" title="This is a hidden tooltip"><i> Welcome to IS445 Homework 2</i>
         </p>
         <img src="C:\Users\sanes\Pictures\DL\Bizarro.jpg" alt="profile picture" style="width:270px;height:320px;">
@@ -33,7 +33,7 @@
     <h3 title=><b><u><i>Expectations for this course</b></u>
         </i>
         </p>
-        <p>I would like you to cover the nuances of humanity and the philisophical debate between good and evil.
+        <p>I would like you to cover the nuances of humanity and the philosophical debate between good and evil.
     </h3>
     </p>
 </body>
