added title to profile page

--- a/website/new.html
+++ b/website/new.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title> Page Title</title>
+    <title>Jacob Maston's Profile</title>
     <link rel="Stylesheet" href="C:\Users\sanes\Desktop\Sample_Start\website\new.css">
 </head>
 
