shorter path in index

--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
     <hr>
     <div>Hello Jacob Maston</div>
     <br>
-    <a href="C:\Users\sanes\Desktop\Sample_Start\website\new.html">My Profile</a>
+    <a href="new.html">My Profile</a>
     <p></p>
     <br>
     <div>The current time is: <span id="output"></span></div>
