added picture, changed line color

--- a/website/new.html
+++ b/website/new.html
@@ -3,16 +3,16 @@
 
 <head>
     <title>Jacob Maston's Profile</title>
-    <link rel="Stylesheet" href="C:\Users\sanes\Desktop\Sample_Start\website\new.css">
+    <link rel="Stylesheet" href="new.css">
 </head>
 
 <body>
     <br>
     <h1 style='text-align:center'><b>Maston, Jacob</b></h1>
-    <hr style="border-color:green">
+    <hr style="border-color:#2DD62D">
     <h3 style="text-align:center" title="This is a hidden tooltip"><i> Welcome to IS445 Homework 2</i>
         </p>
-        <img src="C:\Users\sanes\Pictures\DL\Bizarro.jpg" alt="profile picture" style="width:270px;height:320px;">
+        <img src="Profile_Pic.jpg" alt="profile picture" style="width:270px;height:320px;">
         <p>
             <h3 title=><b><u><i>Education</b></u>
                 </i>
