fixed last heading

--- a/website/new.html
+++ b/website/new.html
@@ -32,9 +32,8 @@
     </ol>
     <h3 title=><b><u><i>Expectations for this course</b></u>
         </i>
-        </p>
-        <p>I would like you to cover the nuances of humanity and the philosophical debate between good and evil.
     </h3>
+    <p>I would like you to cover the nuances of humanity and the philosophical debate between good and evil.</p>
     </p>
 </body>
 
