--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel = 'stylesheet' href = 'style.css'>
-        <link rel = 'app' href = 'app.js' >
         <title>Final Project</title>
     </head>
 
@@ -53,4 +52,6 @@
     <div id = "show-panel" class="panel">
   
     </div>
+    <script src = 'app.js'>
+    </script>
 </body>
