--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="navigation">
         <ul class="nav-list">
-            <li id="js-show-all">Show All Contacts</li>
-            <li id="js-search">Search</li>
+            <li id="js-show-all">Show Current Contacts</li>
+            <li id="js-search">Search Contacts</li>
             <li id="js-add-new">Add New Contact</li>
         </ul>
     </div>
@@ -24,7 +24,7 @@
         </div>
             <div>
                 <label>
-                    <input type="text" name="search" id="search" placeholder="Enter name of contact" />
+                    <input type="text" name="search" id="search" placeholder="Enter new contact's name" />
                 </label>
             </div>
                     <input type="submit" value="Submit" />
@@ -35,13 +35,13 @@
                 <h1>Add a new contact</h1>
                 <div>
                     <label>
-                        <input type="text" name="person" id="name" placeholder="John Smith" />
+                        <input type="text" name="person" id="name" placeholder="Gandalf The Grey" />
                     </label>
                     <label>
-                        <input type="text" name="phone" id="name" placeholder="1234567" />
+                        <input type="text" name="phone" id="name" placeholder="66642069" />
                     </label>
                     <label>
-                        <input type="text" name="email" id="name" placeholder="john@example.com" />
+                        <input type="text" name="email" id="name" placeholder="Gandalf@Wizard.com" />
                     </label>
                 </div>
                 <div>
